<resources>
    <string name="app_name">Reindeer Film</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Rizki Ramadhan</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="you_may_like">You May Like</string>
    <string name="txt_title_example">title</string>
    <string name="released_13_october_2018">Released Date</string>
    <string name="runtime_example">Runtime</string>
    <string name="genre_example">genre</string>
    <string name="txt_actors_example">Actors</string>
    <string name="txt_writer_example">Writer</string>
    <string name="txt_plot_example">Plot</string>
    <string name="txt_director_example">director</string>
    <string name="see_trailer">See Trailer</string>
    <string name="release">Release : \t</string>
    <string name="runtime">Runtime : \t</string>
    <string name="genre">Genre : \t</string>
    <string name="director">Director : \t</string>
    <string name="actors">Actors : \t</string>
    <string name="writer">Writer : \t</string>
    <string name="plot">Plot : \t</string>
    <string name="search_movie">Search Movie</string>
    <string name="title_movie">Title Movie</string>
    <string name="favourite_genre">Favourite Genre</string>
    <string name="exp_search_genre">Action\nMovies</string>
    <string name="cari_film">Find film</string>
    <string name="cari_film_favoritmu_disini">Find your favourite film here</string>
    <string name="search_result">Search Result</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="please_check_your_search">Please check your search</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="hello">Hello dear,\nPlease give us your name to continue</string>
    <string name="name_hint">Name</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="app_information">App Information</string>
</resources>