<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container_img_and_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="120dp"
                android:scaleType="fitXY"
                android:layout_height="144dp"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_title"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/txt_title_example"
                    android:textSize="20sp"
                    android:fontFamily="@font/lato_black"/>

                <LinearLayout
                    android:id="@+id/container_txt_release"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/txt_title"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:textSize="15sp"
                        android:fontFamily="@font/robot_medium"/>

                    <TextView
                        android:id="@+id/txt_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/released_13_october_2018"
                        android:textSize="15sp"
                        android:fontFamily="@font/robot_medium"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_txt_runtime"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/container_txt_release">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        android:textSize="15sp"
                        android:fontFamily="@font/robot_medium"/>

                    <TextView
                        android:id="@+id/txt_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime_example"
                        android:textSize="15sp"
                        android:fontFamily="@font/robot_medium"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_txt_genre"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/container_txt_runtime">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textSize="15sp"
                        android:fontFamily="@font/robot_medium"/>

                    <TextView
                        android:id="@+id/txt_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre_example"
                        android:textSize="15sp"
                        android:fontFamily="@font/robot_medium"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_txt_director"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/container_img_and_title">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

            <TextView
                android:id="@+id/txt_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_director_example"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_txt_actors"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/container_txt_director">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actors"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

            <TextView
                android:id="@+id/txt_actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_actors_example"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_txt_writer"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/container_txt_actors">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writer"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

            <TextView
                android:id="@+id/txt_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_writer_example"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_txt_plot"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/container_txt_writer">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

            <TextView
                android:id="@+id/txt_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_plot_example"
                android:textSize="15sp"
                android:fontFamily="@font/robot_medium"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>