<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <include
            android:id="@+id/container_navbar_main_search"
            layout="@layout/navbar_main"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@id/container_navbar_main_search">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_movie"
                    android:textSize="19sp"
                    android:fontFamily="@font/lato_black"
                    style="@style/Theme.margin"/>
                
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_search_film"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_marginTop="20dp"
                    style="@style/Theme.margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_search_2"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/app_name" />
                        
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/title_movie"
                            android:fontFamily="@font/robot_bold"
                            android:textSize="19sp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite_genre"
                    android:textSize="19sp"
                    android:fontFamily="@font/lato_black"
                    style="@style/Theme.margin"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_search_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="15dp"
                    android:layout_marginBottom="?attr/actionBarSize"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</FrameLayout>